syntax = "proto3";

package utils;
option java_multiple_files = true;
option java_package = "io.grpc.proteusclient";
option java_outer_classname = "UtilsProto";
option go_package = "github.com/dvasilas/proteus/src/protos/utils";

message LogOperation {
  enum ObjectType {
    S3OBJECT = 0;
    MAPCRDT = 1;
  }
  string object_id = 1;
  ObjectType object_type = 2;
  string bucket = 3;
  Vectorclock timestamp = 5;
  Payload payload = 6;
}

message Payload {
  message StateDelta {
    ObjectState old = 1;
    ObjectState new = 2;
  }
  oneof val {
    StateDelta delta = 1;
    Operation op = 2;
    ObjectState state = 3;
  }
}

message ObjectState {
  repeated Attribute attrs = 1;
}

message Operation {
  message Update {
    string op_type = 1;
    Value value = 2;
  }
  message Op {
    Attribute attr = 1;
    Update update = 2;
  }
  repeated Op op = 1;
}

message Attribute {
  enum AttributeType {
    S3TAGSTR = 0;
    S3TAGINT = 1;
    S3TAGFLT = 2;
    CRDTCOUNTER = 3;
    CRDTLWWREG = 4;
  }
  string attr_key= 1;
  AttributeType attr_type = 2;
  Value value = 3;
}
message Value {
  oneof val {
    string str = 1;
    int64 int = 2;
    double flt = 3;
  }
}

message SnapshotTime {
  enum SnapshotTimeType {
    LATEST = 0;
    ZERO = 1;
    INF = 2;
    VECTORCLOCK = 3;
  }
  SnapshotTimeType type = 1;
  Vectorclock value = 2;
}

message Vectorclock {
    map<string, uint64> vc = 1;
  }

message AttributePredicate {
    Attribute attr = 1;
    Value lbound = 3;
    Value ubound = 4;
}

message SnapshotTimePredicate {
  SnapshotTime lbound = 1;
  SnapshotTime ubound = 2;
}